--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <header>
-    <h1><a target="_blank" href="https://fcefyn.unc.edu.ar/documents/5190/Ing._Biom%C3%A9dica_Plan_de_estudio_2025.pdf" title="Ver plan de estudios">Mapa de Ingeniería Biomédica 2025</a></h1>
-     <!-- NUEVO: “pantalla” tipo diapositiva -->
+    <h1>
+        <a target="_blank" href="https://fcefyn.unc.edu.ar/documents/5190/Ing._Biom%C3%A9dica_Plan_de_estudio_2025.pdf" title="Ver plan de estudios">
+            Mapa de Ingeniería Biomédica 2025
+        </a>
+    </h1>
+
+    <!-- Selector de carrera -->
+    <div class="selector-carrera">
+        <label for="carrera">Carrera:</label>
+        <select id="carrera">
+            <option value="biomedica-2025" selected>Ingeniería Biomédica 2025</option>
+            <option value="tusd-2025">Tecnicatura en Sistemas Digitales 2025</option>
+        </select>
+    </div>
 </header>
 <body>
     
