--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Selector de carrera -->
     <div class="selector-carrera">
-        <label for="carrera">Carrera:</label>
+        <label for="carrera"></label>
         <select id="carrera">
             <option value="biomedica-2025" selected>Ingeniería Biomédica 2025</option>
             <option value="tusd-2025">Tecnicatura en Sistemas Digitales 2025</option>
