--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa de Ingeniería Biomédica 2025</title>
+    <title>FCEFyN Map</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <header>
     <h1>
-        <a target="_blank" href="https://fcefyn.unc.edu.ar/documents/5190/Ing._Biom%C3%A9dica_Plan_de_estudio_2025.pdf" title="Ver plan de estudios">
-            Mapa de Ingeniería Biomédica 2025
+        <a target="_blank" href="" title="Pagina de la FCEFyN">
+            FCEFyN Map
         </a>
     </h1>
 
