--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <header>
     <h1>
-        <a target="_blank" href="" title="Pagina de la FCEFyN">
+        <a target="_blank" href="https://fcefyn.unc.edu.ar/" title="Pagina de la FCEFyN">
             FCEFyN Map
         </a>
     </h1>
 
     <!-- Selector de carrera -->
     <div class="selector-carrera">
+        <a id="plan-carrera-link" href="#" target="_blank" title="Ver plan de estudios">
+            <i class="fa-solid fa-book icono-plan-carrera"></i>
+        </a>
         <label for="carrera"></label>
         <select id="carrera">
             <option value="biomedica-2025" selected>Ingeniería Biomédica 2025</option>
