--- a/index.html
+++ b/index.html
@@ -32,5 +32,44 @@
     </div>
 
     <script src="script.js"></script>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <a href="https://github.com/rperroni/fcefyn-map" target="_blank" title="Ver repositorio en GitHub">
+                <i class="fa-brands fa-github icono-footer"></i>
+            </a>
+            <a id="matecito-link" href="#" target="_blank" title="Invitame un matecito">
+                <img src="matecito.png" alt="Matecito" class="icono-footer-mate">
+            </a>
+            <button id="sugerencias-btn" class="footer-btn" title="Enviar sugerencia o reportar error">
+                <i class="fa-regular fa-message"></i>
+            </button>
+        </div>
+    </footer>
+    <!-- Formulario flotante de sugerencias -->
+    <div id="sugerencias-modal" class="sugerencias-modal">
+        <div class="sugerencias-modal-content">
+            <span class="sugerencias-close" id="sugerencias-close">&times;</span>
+            <h2>Enviar sugerencia o reportar error</h2>
+            <form id="sugerencias-form">
+                <div class="sugerencias-row">
+                    <div style="flex:1;">
+                        <label for="sug-nombre">Nombre (opcional):</label>
+                        <input type="text" id="sug-nombre" name="nombre" maxlength="60">
+                    </div>
+                    <div style="flex:1;">
+                        <label for="sug-email">Email (opcional):</label>
+                        <input type="email" id="sug-email" name="email" maxlength="80">
+                    </div>
+                </div>
+                <label for="sug-mensaje">Mensaje:</label>
+                <textarea id="sug-mensaje" name="mensaje" required maxlength="1000" rows="5"></textarea>
+                <button type="submit" class="footer-btn enviar-btn">
+                    <i class="fa-regular fa-paper-plane"></i> Enviar
+                </button>
+            </form>
+            <div id="sugerencias-status"></div>
+        </div>
+    </div>
 </body>
 </html>
