agrego referencias de colores

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
+            <button id="footer-colores-btn" class="footer-btn" title="Referencia de colores">
+                <i class="fa-solid fa-palette"></i>
+            </button>
             <a href="https://github.com/rperroni/fcefyn-map" target="_blank" title="Ver repositorio en GitHub">
                 <i class="fa-brands fa-github icono-footer"></i>
             </a>
@@ -46,6 +49,14 @@
             </button>
         </div>
     </footer>
+    <!-- Modal referencia de colores -->
+    <div id="footer-colores-modal" class="footer-colores-modal">
+        <div class="footer-colores-modal-content">
+            <span class="footer-colores-close" id="footer-colores-close">&times;</span>
+            <h2>Referencia de colores</h2>
+            <div id="footer-colores-list"></div>
+        </div>
+    </div>
     <!-- Formulario flotante de sugerencias -->
     <div id="sugerencias-modal" class="sugerencias-modal">
         <div class="sugerencias-modal-content">
