crear achivo con lista de carreras

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <!-- Footer -->
     <footer>
         <div class="footer-content">
