--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph (Facebook / Instagram / WhatsApp) -->
     <meta property="og:title" content="FCEFyN Map - Planes de estudio interactivos">
     <meta property="og:description" content="Explorá los planes de estudio de la FCEFyN de manera interactiva.">
-    <meta property="og:image" content="https://rperroni.github.io/fcefyn-map/assets/thumbnail.jpg">
+    <meta property="og:image" content="https://rperroni.github.io/fcefyn-map/assets/thumbnail.png">
     <meta property="og:url" content="https://rperroni.github.io/fcefyn-map/">
     <meta property="og:type" content="website">
 </head>
