--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
     <div class="slide">
         <!-- NUEVO: el único que scrollea horizontalmente -->
         <div class="scroll-x">
-        <div id="contenedor-semestres"></div>
+            <div id="contenedor-semestres"></div>
         </div>
+        <button id="optativas-btn" class="toggle-optativas-btn" title="Mostrar optativas">
+            <!--<i class="fa-solid fa-palette"></i>--> Ver optativas
+        </button>
     </div>
 
     <script type="module" src="script.js?v=2"></script>
