asignacion de optativas + programas faltantes

--- a/index.html
+++ b/index.html
@@ -100,5 +100,14 @@
             <div id="sugerencias-status"></div>
         </div>
     </div>
+
+    <!-- Modal: programa no encontrado -->
+    <div id="programa-modal" class="footer-colores-modal">
+        <div class="footer-colores-modal-content">
+            <span id="programa-modal-close" class="footer-colores-close">&times;</span>
+            <h2>Programa no encontrado</h2>
+            <div id="programa-modal-body"></div>
+        </div>
+    </div>
 </body>
 </html>
