add placeholder modal mensajes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <label for="sug-mensaje">Mensaje:</label>
-                <textarea id="sug-mensaje" name="mensaje" required maxlength="1000" rows="5"></textarea>
+                <textarea id="sug-mensaje" name="mensaje" required maxlength="1000" rows="5" placeholder="Errores de correlativas/links no funcionales/sugerencias de diseño/agradecimientos (también me podes agradecer con un matecito). Si vas a reportar un error por favor inclui la mayor cantidad de detalle que puedas: código (p.e. 10-4004), nombre, carrera, año de plan, etc."></textarea>
                 <button type="submit" class="footer-btn enviar-btn">
                     <i class="fa-regular fa-paper-plane"></i> Enviar
                 </button>
