--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <i class="fa-brands fa-github icono-footer"></i>
             </a>
             <a id="matecito-link" href="https://matecito.co/rorryperroni" target="_blank" title="Invitame un matecito">
-                <img src="matecito.png" alt="Matecito" class="icono-footer-mate">
+                <img src="assets/img/matecito.png" alt="Matecito" class="icono-footer-mate">
             </a>
             <!--<a href='https://matecito.co/rorryperroni' rel='noopener' target='_blank'>
                 <img srcset='https://cdn.matecito.co/assets/images/button_18.png 1x, 
