Agregando DB - test 2

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     </div>
 
     <script type="module" src="script.js?v=2"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    <script src="script.js"></script>
     <!-- Footer -->
     <footer>
         <div class="footer-content">
