--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         </button>
     </div>
 
-    <script type="module" src="script.js?v=2"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    
     
     <!-- Footer -->
     <footer>
@@ -117,5 +115,9 @@
             <div id="programa-modal-body"></div>
         </div>
     </div>
+    <!-- Scripts -->
+    <script type="module" src="script.js?v=2"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
 </body>
 </html>
