--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <div class="sync-controls" style="display: inline-block; margin-left: 20px;">
         <input type="text" id="dni-input" placeholder="DNI para sincronizar" 
             style="padding: 5px; margin-right: 5px; width: 150px;">
-        <button onclick="configurarDNI(document.getElementById('dni-input').value)">Sincronizar</button>
-        <button onclick="limpiarDNI()">Local</button>
+        <button id="btn-sincronizar">Sincronizar</button>
+        <button id="btn-local">Local</button>
+        <span id="sync-status" style="margin-left: 10px; font-size: 0.9em;"></span>
     </div>
     <!-- Selector de carrera personalizado -->
     <div class="selector-carrera">
