change project name

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Open Graph (Facebook / Instagram / WhatsApp) -->
-    <meta property="og:title" content="FCEFyN Map">
-    <meta property="og:description" content="Mapa interactivo de planes de estudio de FCEFyN">
+    <meta property="og:title" content="Exactas Map">
+    <meta property="og:description" content="Mapa interactivo de planes de estudio de FCEFyN - UNC">
     <meta property="og:image" content="https://rperroni.github.io/fcefyn-map/assets/thumbnail.png">
     <meta property="og:url" content="https://rperroni.github.io/fcefyn-map/">
     <meta property="og:type" content="website">
